include/Myelin/Repository.h

 class List;
	/* repository */
	Myelin::Repository *myelin_repository_new (const char *name);
	
	void myelin_repository_free (Myelin::Repository *repo);
	
	
	const char *myelin_repository_get_name (Myelin::Repository *repo);
	
	Myelin::Class *myelin_repository_get_class (Myelin::Repository *repo,
	                                            const char *name);
	
	void myelin_repository_register_class (Myelin::Repository *repo,
	                                       Myelin::Class *klass);
	
	
	Myelin::List *myelin_repository_get_class_list (Myelin::Repository *repo);
	
	
	
	/* repository factory */
	Myelin::Repository *myelin_repository_factory_create (const char *name);
	Myelin::Repository *myelin_repository_factory_get (const char *name);
	
	void myelin_repository_factory_add (Myelin::Repository *repo);
	
	Myelin::List *myelin_repository_factory_get_repository_list ();