bindings/python/myelin/introspection.py


###############################################
# Set List Prototypes                         #
###############################################

__lib__.myelin_list_new.argtypes = None
__lib__.myelin_list_new.restype  = ctypes.c_void_p

__lib__.myelin_list_free.argtypes = [List]
__lib__.myelin_list_free.restype  = None

__lib__.myelin_list_size.argtypes = [List]
__lib__.myelin_list_size.restype  = ctypes.c_uint

__lib__.myelin_list_index.argtypes = [List, ctypes.c_uint]
__lib__.myelin_list_index.restype  = ctypes.c_void_p

__lib__.myelin_list_append.argtypes = [List, Value]
__lib__.myelin_list_append.restype  = None




###############################################
# Set Object Prototypes                       #
###############################################

__lib__.myelin_object_new.argtypes = [Class, List]
__lib__.myelin_object_new.restype  = ctypes.c_void_p

__lib__.myelin_object_new_instance.argtypes = [Class, ctypes.c_void_p]
__lib__.myelin_object_new_instance.restype  = ctypes.c_void_p

__lib__.myelin_object_free.argtypes = [Object]
__lib__.myelin_object_free.restype  = None


__lib__.myelin_object_call.argtypes = [Object, ctypes.c_char_p, List]
__lib__.myelin_object_call.restype  = ctypes.c_void_p


__lib__.myelin_object_set_instance.argtypes = [Object, ctypes.c_void_p]
__lib__.myelin_object_set_instance.restype  = None

__lib__.myelin_object_get_instance.argtypes = [Object]
__lib__.myelin_object_get_instance.restype  = ctypes.c_void_p




###############################################
# Set Function Prototypes                     #
###############################################

__lib__.myelin_function_get_name.argtypes = [Function]
__lib__.myelin_function_get_name.restype  = ctypes.c_char_p

__lib__.myelin_function_get_return_type.argtypes = [Function]
__lib__.myelin_function_get_return_type.restype  = ctypes.c_void_p

__lib__.myelin_function_get_param_count.argtypes = [Function]
__lib__.myelin_function_get_param_count.restype  = ctypes.c_int

__lib__.myelin_function_get_param_type.argtypes = [Function, ctypes.c_int]
__lib__.myelin_function_get_param_type.restype  = ctypes.c_void_p

__lib__.myelin_function_get_param_list.argtypes = [Function]
__lib__.myelin_function_get_param_list.restype  = ctypes.c_void_p

__lib__.myelin_function_call.argtypes = [Function, ctypes.c_void_p, List]
__lib__.myelin_function_call.restype  = ctypes.c_void_p




###############################################
# Set Constructor Prototypes                  #
###############################################

__lib__.myelin_constructor_get_param_count.argtypes = [Constructor]
__lib__.myelin_constructor_get_param_count.restype  = ctypes.c_int

__lib__.myelin_constructor_get_param_type.argtypes = [Constructor, ctypes.c_int]
__lib__.myelin_constructor_get_param_type.restype  = ctypes.c_void_p

__lib__.myelin_constructor_get_param_list.argtypes = [Constructor]
__lib__.myelin_constructor_get_param_list.restype  = ctypes.c_void_p

__lib__.myelin_constructor_call.argtypes = [Constructor, List]
__lib__.myelin_constructor_call.restype  = ctypes.c_void_p




###############################################
# Set Class Prototypes                        #
###############################################

__lib__.myelin_class_get_name.argtypes = [Class]
__lib__.myelin_class_get_name.restype  = ctypes.c_char_p

__lib__.myelin_class_get_namespace.argtypes = [Class]
__lib__.myelin_class_get_namespace.restype  = ctypes.c_void_p

__lib__.myelin_class_register_constructor.argtypes = [Class, Constructor]
__lib__.myelin_class_register_constructor.restype  = None

__lib__.myelin_class_get_constructor_list.argtypes = [Class]
__lib__.myelin_class_get_constructor_list.restype  = ctypes.c_void_p

__lib__.myelin_class_register_function.argtypes = [Class, Function]
__lib__.myelin_class_register_function.restype  = None

__lib__.myelin_class_get_function.argtypes = [Class, ctypes.c_char_p]
__lib__.myelin_class_get_function.restype  = ctypes.c_void_p

__lib__.myelin_class_get_function_list.argtypes = [Class]
__lib__.myelin_class_get_function_list.restype  = ctypes.c_void_p


__lib__.myelin_class_create_instance.argtypes = [Class, List]
__lib__.myelin_class_create_instance.restype  = ctypes.c_void_p

__lib__.myelin_class_create_object.argtypes = [Class, List]
__lib__.myelin_class_create_object.restype  = ctypes.c_void_p

__lib__.myelin_class_create_object_instance.argtypes = [Class, ctypes.c_void_p]
__lib__.myelin_class_create_object_instance.restype  = ctypes.c_void_p




###############################################
# Set Repository Prototypes                   #
###############################################

__lib__.myelin_repository_new.argtypes = [ctypes.c_char_p]
__lib__.myelin_repository_new.restype  = ctypes.c_void_p

__lib__.myelin_repository_free.argtypes = [Repository]
__lib__.myelin_repository_free.restype  = None

__lib__.myelin_repository_get_name.argtypes = [Repository]
__lib__.myelin_repository_get_name.restype  = ctypes.c_char_p

__lib__.myelin_repository_get_class.argtypes = [Repository, ctypes.c_char_p]
__lib__.myelin_repository_get_class.restype  = ctypes.c_void_p

__lib__.myelin_repository_register_class.argtypes = [Repository, ctypes.c_void_p]
__lib__.myelin_repository_register_class.restype  = None

__lib__.myelin_repository_get_class_list.argtypes = [Repository]
__lib__.myelin_repository_get_class_list.restype  = ctypes.c_void_p




###############################################
# Set Repository Factory Prototypes           #
###############################################

__lib__.myelin_repository_factory_create.argtypes = [ctypes.c_char_p]
__lib__.myelin_repository_factory_create.restype  = ctypes.c_void_p

__lib__.myelin_repository_factory_get.argtypes = [ctypes.c_char_p]
__lib__.myelin_repository_factory_get.restype  = ctypes.c_void_p

__lib__.myelin_repository_factory_add.argtypes = [Repository]
__lib__.myelin_repository_factory_add.restype  = None

__lib__.myelin_repository_factory_get_repository_list.argtypes = None
__lib__.myelin_repository_factory_get_repository_list.restype  = ctypes.c_void_p

